Add reset password API
